#290 add mongo async client
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/connector-ga/pom.xml
+++ b/bot/connector-ga/pom.xml
@@ -32,7 +32,7 @@
     <dependencies>
         <dependency>
             <groupId>fr.vsct.tock</groupId>
-            <artifactId>tock-bot-engine</artifactId>
+            <artifactId>tock-bot-engine-jackson</artifactId>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
