--- a/bot/connector-alexa/pom.xml
+++ b/bot/connector-alexa/pom.xml
@@ -36,7 +36,7 @@
     <dependencies>
         <dependency>
             <groupId>fr.vsct.tock</groupId>
-            <artifactId>tock-bot-engine</artifactId>
+            <artifactId>tock-bot-engine-jackson</artifactId>
         </dependency>
         <dependency>
             <groupId>com.amazon.alexa</groupId>
