--- a/bot/storage-mongo/pom.xml
+++ b/bot/storage-mongo/pom.xml
@@ -38,6 +38,10 @@
             <artifactId>kmongo</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.litote.kmongo</groupId>
+            <artifactId>kmongo-async</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.jasypt</groupId>
             <artifactId>jasypt</artifactId>
         </dependency>
