--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -66,6 +66,10 @@
             <groupId>org.litote.kmongo</groupId>
             <artifactId>kmongo-id-jackson</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.litote.kmongo</groupId>
+            <artifactId>kmongo-jackson-modules-service-loader</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>io.github.microutils</groupId>
