--- a/nlp/front/storage-mongo/pom.xml
+++ b/nlp/front/storage-mongo/pom.xml
@@ -37,6 +37,10 @@
             <groupId>org.litote.kmongo</groupId>
             <artifactId>kmongo</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.litote.kmongo</groupId>
+            <artifactId>kmongo-async</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>io.mockk</groupId>
