--- a/nlp/core/client/pom.xml
+++ b/nlp/core/client/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-nlp-core</artifactId>
-        <version>1.1.1-SNAPSHOT</version>
+        <version>1.1.1</version>
     </parent>
 
     <artifactId>tock-nlp-core-client</artifactId>
