update dependencies & cleanup
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/pom.xml
+++ b/pom.xml
@@ -31,14 +31,14 @@
         <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
 
-        <kotlin>1.2.51</kotlin>
+        <kotlin>1.2.60</kotlin>
 
         <slf4j>1.7.25</slf4j>
         <logback>1.2.3</logback>
-        <kotlin-logging>1.5.4</kotlin-logging>
+        <kotlin-logging>1.5.9</kotlin-logging>
 
         <kodein>4.1.0</kodein>
-        <kmongo>3.8.1</kmongo>
+        <kmongo>3.8.2-SNAPSHOT</kmongo>
         <fongo>2.2.0-RC2</fongo>
         <jackson>2.9.3</jackson>
         <jackson-module>2.9.3</jackson-module>
@@ -57,7 +57,7 @@
         <junit-platform>1.2.0</junit-platform>
         <junit-jupiter>5.2.0</junit-jupiter>
         
-        <mockk>1.8.5</mockk>
+        <mockk>1.8.6</mockk>
 
         <plugin.surefire>2.22.0</plugin.surefire>
         <plugin.source>3.0.1</plugin.source>
