--- a/pom.xml
+++ b/pom.xml
@@ -449,6 +449,9 @@
                     <excludes>
                         <exclude>**/*IntegrationTest.*</exclude>
                     </excludes>
+                    <systemPropertyVariables>
+                        <kmongo.flapdoodle.replicaset>true</kmongo.flapdoodle.replicaset>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
             <plugin>
