--- a/pom.xml
+++ b/pom.xml
@@ -35,29 +35,30 @@
 
         <slf4j>1.7.25</slf4j>
         <logback>1.2.3</logback>
-        <kotlin-logging>1.5.9</kotlin-logging>
+        
+        <kotlin-logging>1.6.10</kotlin-logging>
 
         <kodein>4.1.0</kodein>
-        <kmongo>3.8.2-SNAPSHOT</kmongo>
+        <kmongo>3.8.2</kmongo>
         <fongo>2.2.0-RC2</fongo>
         <jackson>2.9.3</jackson>
         <jackson-module>2.9.3</jackson-module>
-        <klaxon>3.0.6</klaxon>
+        <klaxon>3.0.8</klaxon>
         <vertx>3.5.3</vertx>
         <retrofit>2.4.0</retrofit>
         <okhttp>3.11.0</okhttp>
         <guava>26.0-jre</guava>
-        <google-auth>1.24.1</google-auth>
+        <google-auth>1.25.0</google-auth>
         <jasypt>1.9.2</jasypt>
         <commons-csv>1.5</commons-csv>
         <emoji>5.0</emoji>
         <commons-codec>1.11</commons-codec>
         <commons-lang>3.8</commons-lang>
 
-        <junit-platform>1.2.0</junit-platform>
-        <junit-jupiter>5.2.0</junit-jupiter>
+        <junit-platform>1.3.0</junit-platform>
+        <junit-jupiter>5.3.0</junit-jupiter>
         
-        <mockk>1.8.6</mockk>
+        <mockk>1.8.7</mockk>
 
         <plugin.surefire>2.22.0</plugin.surefire>
         <plugin.source>3.0.1</plugin.source>
