--- a/bot/admin/kotlin-compiler/client/pom.xml
+++ b/bot/admin/kotlin-compiler/client/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-bot-admin-kotlin-compiler</artifactId>
-        <version>1.2.1-SNAPSHOT</version>
+        <version>1.2.1</version>
     </parent>
 
     <artifactId>tock-bot-admin-kotlin-compiler-client</artifactId>
