--- a/bot/connector-slack/pom.xml
+++ b/bot/connector-slack/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <artifactId>tock-bot</artifactId>
         <groupId>fr.vsct.tock</groupId>
-        <version>1.2.1-SNAPSHOT</version>
+        <version>1.2.1</version>
     </parent>
 
     <artifactId>tock-bot-connector-slack</artifactId>
