--- a/dokka/pom.xml
+++ b/dokka/pom.xml
@@ -100,6 +100,13 @@
                             <urlSuffix>#L</urlSuffix>
                         </link>
                         <link>
+                            <dir>${project.basedir}/../bot/connector-rocketchat/src/main/kotlin</dir>
+                            <url>
+                                https://github.com/voyages-sncf-technologies/tock/blob/master/bot/connector-rocketchat/src/main/kotlin
+                            </url>
+                            <urlSuffix>#L</urlSuffix>
+                        </link>
+                        <link>
                             <dir>${project.basedir}/../bot/connector-alexa/src/main/kotlin</dir>
                             <url>
                                 https://github.com/voyages-sncf-technologies/tock/blob/master/bot/connector-alexa/src/main/kotlin
