--- a/bot/admin/kotlin-compiler/shared/pom.xml
+++ b/bot/admin/kotlin-compiler/shared/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>fr.vsct.tock</groupId>
         <artifactId>tock-bot-admin-kotlin-compiler</artifactId>
-        <version>1.2.2-SNAPSHOT</version>
+        <version>1.3.0</version>
     </parent>
 
     <artifactId>tock-bot-admin-kotlin-compiler-shared</artifactId>
