--- a/nlp/admin/web/package.json
+++ b/nlp/admin/web/package.json
@@ -26,15 +26,15 @@
     "@angular/router": "^6.1.0",
     "angular-file-saver": "^1.1.3",
     "angular2-moment": "^1.9.0",
-    "hammerjs": "^2.0.8",
     "chart.js": "^2.7.0",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
     "ng2-charts": "^1.6.0",
+    "ng2-file-upload": "^1.3.0",
     "ngx-infinite-scroll": "^6.0.1",
     "ngx-moment": "^3.1.0",
-    "ng2-file-upload": "^1.3.0",
     "rxjs": "^6.0.0",
-    "rxjs-compat": "^6.2.2",
+    "rxjs-tslint": "^0.1.5",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
