fixes recursive symlink
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/pom.xml
+++ b/bot/admin/web/pom.xml
@@ -40,58 +40,76 @@
               <target>
                 <symlink link="${project.basedir}/src/app/applications"
                          resource="${project.basedir}/../../../nlp/admin/web/src/app/applications"
-                         failonerror="false"/>
+                         failonerror="false"
+                         overwrite="true"/>
                 <symlink link="${project.basedir}/src/app/archive"
                          resource="${project.basedir}/../../../nlp/admin/web/src/app/archive"
-                         failonerror="false"/>
+                         failonerror="false"
+                         overwrite="true"/>
                 <symlink link="${project.basedir}/src/app/build"
                          resource="${project.basedir}/../../../nlp/admin/web/src/app/build"
-                         failonerror="false"/>
+                         failonerror="false"
+                         overwrite="true"/>
                 <symlink link="${project.basedir}/src/app/core-nlp"
                          resource="${project.basedir}/../../../nlp/admin/web/src/app/core-nlp"
-                         failonerror="false"/>
+                         failonerror="false"
+                         overwrite="true"/>
                 <symlink link="${project.basedir}/src/app/entities"
                          resource="${project.basedir}/../../../nlp/admin/web/src/app/entities"
-                         failonerror="false"/>
+                         failonerror="false"
+                         overwrite="true"/>
                 <symlink link="${project.basedir}/src/app/inbox"
                          resource="${project.basedir}/../../../nlp/admin/web/src/app/inbox"
-                         failonerror="false"/>
+                         failonerror="false"
+                         overwrite="true"/>
                 <symlink link="${project.basedir}/src/app/intents"
                          resource="${project.basedir}/../../../nlp/admin/web/src/app/intents"
-                         failonerror="false"/>
+                         failonerror="false"
+                         overwrite="true"/>
                 <symlink link="${project.basedir}/src/app/logs"
                          resource="${project.basedir}/../../../nlp/admin/web/src/app/logs"
-                         failonerror="false"/>
+                         failonerror="false"
+                         overwrite="true"/>
                 <symlink link="${project.basedir}/src/app/model"
                          resource="${project.basedir}/../../../nlp/admin/web/src/app/model"
-                         failonerror="false"/>
+                         failonerror="false"
+                         overwrite="true"/>
                 <symlink link="${project.basedir}/src/app/nlp-tabs"
                          resource="${project.basedir}/../../../nlp/admin/web/src/app/nlp-tabs"
-                         failonerror="false"/>
+                         failonerror="false"
+                         overwrite="true"/>
                 <symlink link="${project.basedir}/src/app/quality-nlp"
                          resource="${project.basedir}/../../../nlp/admin/web/src/app/quality-nlp"
-                         failonerror="false"/>
+                         failonerror="false"
+                         overwrite="true"/>
                 <symlink link="${project.basedir}/src/app/scroll"
                          resource="${project.basedir}/../../../nlp/admin/web/src/app/scroll"
-                         failonerror="false"/>
+                         failonerror="false"
+                         overwrite="true"/>
                 <symlink link="${project.basedir}/src/app/search"
                          resource="${project.basedir}/../../../nlp/admin/web/src/app/search"
-                         failonerror="false"/>
+                         failonerror="false"
+                         overwrite="true"/>
                 <symlink link="${project.basedir}/src/app/sentence-analysis"
                          resource="${project.basedir}/../../../nlp/admin/web/src/app/sentence-analysis"
-                         failonerror="false"/>
+                         failonerror="false"
+                         overwrite="true"/>
                 <symlink link="${project.basedir}/src/app/sentences-scroll"
                          resource="${project.basedir}/../../../nlp/admin/web/src/app/sentences-scroll"
-                         failonerror="false"/>
+                         failonerror="false"
+                         overwrite="true"/>
                 <symlink link="${project.basedir}/src/app/shared-nlp"
                          resource="${project.basedir}/../../../nlp/admin/web/src/app/shared-nlp"
-                         failonerror="false"/>
+                         failonerror="false"
+                         overwrite="true"/>
                 <symlink link="${project.basedir}/src/app/test-nlp"
                          resource="${project.basedir}/../../../nlp/admin/web/src/app/test-nlp"
-                         failonerror="false"/>
+                         failonerror="false"
+                         overwrite="true"/>
                 <symlink link="${project.basedir}/src/app/try"
                          resource="${project.basedir}/../../../nlp/admin/web/src/app/try"
-                         failonerror="false"/>
+                         failonerror="false"
+                         overwrite="true"/>
               </target>
             </configuration>
             <goals>
