#349 first implementation of WhatsApp connector
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -39,6 +39,7 @@
         <module>connector-slack</module>
         <module>connector-alexa</module>
         <module>connector-rocketchat</module>
+        <module>connector-whatsapp</module>
         <module>storage-mongo</module>
 
         <module>toolkit</module>
@@ -87,6 +88,11 @@
             <dependency>
                 <groupId>fr.vsct.tock</groupId>
                 <artifactId>tock-bot-connector-rocketchat</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>fr.vsct.tock</groupId>
+                <artifactId>tock-bot-connector-whatsapp</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
