--- a/bot/connector-whatsapp/pom.xml
+++ b/bot/connector-whatsapp/pom.xml
@@ -24,9 +24,9 @@
         <version>2.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>tock-bot-connector-slack</artifactId>
-    <name>Tock Bot Slack Connector</name>
-    <description>Bot Connector for Slack</description>
+    <artifactId>tock-bot-connector-whatsapp</artifactId>
+    <name>Tock Bot WhatsApp Connector</name>
+    <description>Bot Connector for WhatsApp</description>
 
     <dependencies>
         <dependency>
@@ -57,12 +57,6 @@
         <dependency>
             <groupId>io.mockk</groupId>
             <artifactId>mockk</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.vertx</groupId>
-            <artifactId>vertx-codegen</artifactId>
-            <version>${vertx}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
