resolves #355 add stt engine support
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/engine/pom.xml
+++ b/bot/engine/pom.xml
@@ -41,6 +41,10 @@
             <groupId>fr.vsct.tock</groupId>
             <artifactId>tock-translator-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>fr.vsct.tock</groupId>
+            <artifactId>tock-stt-core</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>io.vertx</groupId>
