--- a/stt/core/pom.xml
+++ b/stt/core/pom.xml
@@ -20,47 +20,23 @@
 
     <parent>
         <groupId>fr.vsct.tock</groupId>
-        <artifactId>tock-bot</artifactId>
+        <artifactId>tock-stt</artifactId>
         <version>2.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>tock-bot-connector-whatsapp</artifactId>
-    <name>Tock Bot WhatsApp Connector</name>
-    <description>Bot Connector for WhatsApp</description>
+    <artifactId>tock-stt-core</artifactId>
+    <name>Tock STT Core</name>
+    <description>STT core classes</description>
 
     <dependencies>
         <dependency>
             <groupId>fr.vsct.tock</groupId>
-            <artifactId>tock-bot-engine-jackson</artifactId>
+            <artifactId>tock-shared</artifactId>
         </dependency>
         <dependency>
             <groupId>fr.vsct.tock</groupId>
-            <artifactId>tock-stt-core</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-test-junit5</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-params</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.mockk</groupId>
-            <artifactId>mockk</artifactId>
+            <artifactId>tock-shared</artifactId>
+            <type>test-jar</type>
             <scope>test</scope>
         </dependency>
     </dependencies>
