--- a/stt/pom.xml
+++ b/stt/pom.xml
@@ -20,24 +20,22 @@
 
     <parent>
         <groupId>fr.vsct.tock</groupId>
-        <artifactId>tock-bot</artifactId>
+        <artifactId>tock-root</artifactId>
         <version>2.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>tock-bot-connector-whatsapp</artifactId>
-    <name>Tock Bot WhatsApp Connector</name>
-    <description>Bot Connector for WhatsApp</description>
+    <artifactId>tock-stt</artifactId>
+    <packaging>pom</packaging>
+    <name>Tock STT</name>
+    <description>Root project for STT support</description>
+
+    <modules>
+        <module>core</module>
+        <module>noop</module>
+        <module>google-speech</module>
+    </modules>
 
     <dependencies>
-        <dependency>
-            <groupId>fr.vsct.tock</groupId>
-            <artifactId>tock-bot-engine-jackson</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>fr.vsct.tock</groupId>
-            <artifactId>tock-stt-core</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test-junit5</artifactId>
@@ -64,5 +62,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
 </project>
