--- a/stt/google-speech/pom.xml
+++ b/stt/google-speech/pom.xml
@@ -42,6 +42,16 @@
             <artifactId>jackson-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>ws.schild</groupId>
+            <artifactId>jave-core</artifactId>
+            <version>2.4.4</version>
+        </dependency>
+        <dependency>
+            <groupId>ws.schild</groupId>
+            <artifactId>jave-native-linux64</artifactId>
+            <version>2.4.4</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.cloud</groupId>
             <artifactId>google-cloud-speech</artifactId>
             <version>${google-speech}</version>
